# PPT-Agent

./: .env.example  .gitignore  CLAUDE.md  PROJECT_SUMMARY.md  README.md  plan.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  run.sh
examples/: agent_usage.py  basic_template_usage.py  deepseek_usage.py  full_ppt_generation.py  outline_generation_demo.py
src/: __init__.py  cli.py  exceptions.py
src/agent/: __init__.py  ppt_agent.py
src/generator/: __init__.py  ppt_generator.py  styling.py
src/generator/renderers/: __init__.py  content.py  cover.py  ending.py  toc.py
src/outline/: __init__.py  generator.py  llm_client.py  models.py  prompts.py
src/template/: __init__.py  loader.py  models.py  validator.py
src/utils/: config.py  file_utils.py  logger.py
templates/json/: business_001.json  simple_001.json
tests/: conftest.py
tests/unit/: test_agent.py  test_deepseek_client.py  test_outline_generator.py  test_outline_models.py  test_ppt_generator.py  test_template_loader.py  test_template_models.py
